--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/surunzi/allye#readme",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
     "webpack": "^3.10.0"
   }
 }
